# entraid-agentid-demo

./: EntraAgentID-Functions.ps1  README.md  output-agentcore-local.txt  output-agentcore.txt  output-awsiam.txt  output-azuremanagedidentity.txt  output-gcpiam.txt  output-secret.txt  sign-in-demo-aws-iam.ps1  sign-in-demo-azuremanagedidentity.ps1  sign-in-demo-gcp-iam.ps1  sign-in-demo-secret.ps1
signindemo/agentcore/: agentcore.json  aws-targets.json
signindemo/agentcore/.cli/: deployed-state.json
signindemo/agentcore/cdk/: package-lock.json
signindemo/agentcore/cdk/lib/: cdk-stack.ts
signindemo/app/signindemo/: README.md  main.py  pyproject.toml
